@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/admin-tools
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*admin-tools-0.20 (25 May 2014)
+
+  25 May 2014; Johann Schmitz <ercpe@gentoo.org> +admin-tools-0.20.ebuild:
+  Version bump of admin-tools
 
   03 Jul 2013; Justin Lecher <jlec@gentoo.org> -admin-tools-0.17.ebuild,
   -admin-tools-0.18.ebuild, admin-tools-0.19.ebuild, metadata.xml:
@@ -56,4 +61,3 @@
   19 Jan 2010; Justin Lecher (jlec) <jlec@j-schmitz.net>
   admin-tools-0.1.ebuild, +metadata.xml:
   Sorry, aber ich mir war grad langweilig ;)
-
